--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ java {
     }
 }
 
+ext {
+    querydslVersion = '7.0'
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -32,8 +36,31 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // QueryDSL
+    implementation "io.github.openfeign.querydsl:querydsl-jpa:${querydslVersion}"
+    implementation "io.github.openfeign.querydsl:querydsl-core:${querydslVersion}"
+    annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${querydslVersion}:jpa"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+// --- QueryDSL 관련 설정 ---
+def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
+
+sourceSets {
+    main.java.srcDirs += [ querydslDir ]
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.generatedSourceOutputDirectory.set(querydslDir)
+}
+
+clean.doLast {
+    file(querydslDir).deleteDir()
+}
+// --- QueryDSL 관련 설정 ---
